--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# JetBrains IDEs
+.idea/
+*.iml
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
